--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js && npm run deploy-commands",
+        "start": "node index.js",
+        "prestart": "npm run deploy-commands",
         "deploy-commands": "node deploy-commands.js"
     },
     "repository": {
@@ -19,6 +20,7 @@
     },
     "homepage": "https://github.com/tomking/brassican-bot#readme",
     "dependencies": {
-        "discord.js": "^14.13.0"
+        "discord.js": "^14.13.0",
+        "dotenv": "^16.3.1"
     }
 }
