--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     },
     "homepage": "https://github.com/tomking/brassican-bot#readme",
     "dependencies": {
+        "@wise-old-man/utils": "^3.0.0",
         "discord.js": "^14.13.0",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "mongoose": "^7.4.3"
     }
 }
