--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "prestart": "npm run deploy-commands",
         "start": "node index.js",
         "deploy-commands": "node deploy-commands.js"
     },
