--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@wise-old-man/utils": "^3.0.0",
         "discord.js": "^14.13.0",
         "dotenv": "^16.3.1",
-        "mongoose": "^7.6.7"
+        "mongoose": "^7.6.7",
+        "node-cron": "^3.0.3"
     }
 }
