--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
         "@wise-old-man/utils": "^3.0.0",
         "discord.js": "^14.13.0",
         "dotenv": "^16.3.1",
+        "joi": "^17.13.3",
         "mongoose": "^7.6.7",
         "node-cron": "^3.0.3"
+    },
+    "devDependencies": {
+        "@types/node-cron": "^3.0.11"
     }
 }
