--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "discord.js": "^14.16.2",
         "dotenv": "^16.4.5",
         "joi": "^17.13.3",
+        "migrate-mongo": "^11.0.0",
         "mongoose": "^8.6.3",
         "node-cron": "^3.0.3"
     },
