Change (Number)QuestPoints to (Bool)QuestCape

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "infernoCabbages": 50,
     "quiverCabbages": 0,
     "blorvaCabbages": 0,
+    "questCapeCabbages": 0,
     "adTierCabbages": {
         "EASY": 5,
         "MEDIUM": 10,
