--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "migrate-mongo": "^11.0.0",
         "mongoose": "^8.7.2",
         "node-cron": "^3.0.3",
-        "prettier": "^3.3.2"
+        "prettier": "^3.3.2",
+        "ts-node": "^10.9.2"
     },
     "devDependencies": {
         "@types/migrate-mongo": "^10.0.5",
