--- a/config.json
+++ b/config.json
@@ -1,6 +1,16 @@
 {
     "rankCutoffs": [0, 100, 250, 500, 1000, 1500, 2500, 5000, 6500],
-    "rankNames": ["Jade","Red Topaz","Sapphire","Emerald","Ruby","Diamond","Dragon Stone","Onyx","Zenyte"],
+    "rankNames": [
+        "Jade",
+        "Red Topaz",
+        "Sapphire",
+        "Emerald",
+        "Ruby",
+        "Diamond",
+        "Dragon Stone",
+        "Onyx",
+        "Zenyte"
+    ],
     "maxCabbages": 100,
     "infernoCabbages": 100,
     "quiverCabbages": 100,
@@ -20,4 +30,4 @@
         "MASTER": 80,
         "GRANDMASTER": 160
     }
-  }
+}
