--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "brassican-bot",
+    "type": "module",
     "version": "1.0.0",
     "description": "A discord bot that manages the custom rank system for the Bekt clan.",
     "main": "index.ts",
@@ -7,7 +8,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "ts-node index.ts",
         "format": "prettier --config .prettierrc **/*.ts --write --check",
-        "lint": "eslint . --ext .ts"
+        "lint": "eslint --flag unstable_ts_config"
     },
     "engines": {
         "node": ">=18"
@@ -34,12 +35,14 @@
         "eslint-plugin-jest": "^28.10.0",
         "eslint-plugin-prettier": "^5.2.1",
         "jest": "^29.7.0",
+        "jiti": "^2.4.2",
         "joi": "^17.13.3",
         "migrate-mongo": "^11.0.0",
         "mongoose": "^8.9.2",
         "node-cron": "^3.0.3",
         "prettier": "^3.4.2",
         "ts-node": "^10.9.2",
+        "typescript-eslint": "^8.18.2",
         "zod": "^3.24.1"
     },
     "devDependencies": {
