--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": "index.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "ts-node index.ts",
+        "start": "tsx index.ts",
         "format": "prettier --config .prettierrc **/*.ts --write --check",
         "lint": "eslint --flag unstable_ts_config"
     },
@@ -41,7 +41,7 @@
         "mongoose": "^8.9.2",
         "node-cron": "^3.0.3",
         "prettier": "^3.4.2",
-        "ts-node": "^10.9.2",
+        "tsx": "^4.19.2",
         "typescript-eslint": "^8.18.2",
         "zod": "^3.24.1"
     },
