--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "@types/jest": "^29.5.14",
         "@typescript-eslint/eslint-plugin": "^8.19.0",
         "@typescript-eslint/parser": "^8.19.0",
-        "@wise-old-man/utils": "^3.3.6",
+        "@wise-old-man/utils": "^3.3.7",
         "discord.js": "^14.17.3",
         "dotenv": "^16.4.7",
         "eslint": "^9.18.0",
@@ -44,6 +44,7 @@
         "mongoose": "^8.9.5",
         "node-cron": "^3.0.3",
         "prettier": "^3.4.2",
+        "ts-node": "^10.9.2",
         "tsx": "^4.19.2",
         "typescript-eslint": "^8.19.1",
         "zod": "^3.24.1"
