--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "joi": "^17.13.3",
         "migrate-mongo": "^11.0.0",
         "mongoose": "^8.9.3",
-        "node-cron": "^3.0.3",
+        "node-schedule": "^2.1.1",
         "prettier": "^3.4.2",
         "tsx": "^4.19.2",
         "typescript-eslint": "^8.19.1",
@@ -50,6 +50,6 @@
     },
     "devDependencies": {
         "@types/migrate-mongo": "^10.0.5",
-        "@types/node-cron": "^3.0.11"
+        "@types/node-schedule": "^2.1.7"
     }
 }
